# rust_spor

./: Cargo.toml  README.rst
docs/live-demo/: script.md
src/: anchor.rs  diff.rs  errors.rs  file_io.rs  lib.rs  repository.rs  result.rs  scoring.rs  updating.rs  validation.rs
src/alignment/: align.rs  mod.rs  smith_waterman.rs
src/repository/: iteration.rs  mod.rs  repository.rs  serialization.rs
tests/: canned_tests.rs  cucumber.rs
tests/e2e/: cucumber.rs  world.rs
tests/e2e/features/: cli.feature
tests/e2e/steps/: cli.rs
tools/follow-history/: .gitignore  README.md
