[package]
name = "spor"
version = "0.1.0"
authors = ["Austin Bingham <austin.bingham@gmail.com>"]

[dependencies]
docopt = "1"
glob = "0.2"
ndarray = "0.12.0"
ordered-float = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.7", features = ["v4"] }
yaml-rust = "0.4"